--- a/vbda-email-platform/package.json
+++ b/vbda-email-platform/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.2",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.5",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
